--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,22 +4,5 @@
 #    mode: HTML
 
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
-    username: root
-    password: 1234
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-      
-    show-sql: true # \u63A7\u5236\u53F0\u663E\u793Asql\u8BED\u53E5
-
-# \u65E5\u5FD7
-logging:
-  level: 
-    root: info
-    com.al: debug
-  file:
-    name: log/blog.log
+  profiles:
+    active: dev
